<resources>
    <string name="app_name">practicandoMVVM</string>
    <string name="titulo">Titulo</string>
    <string name="subtitulo">Subtitulo\n</string>
    <string name="descripcion">Descripción</string>
    <string name="codigo_de_barra">Codigo de Barra</string>
    <string name="precio">precio</string>
    <string name="buscar">buscar</string>
    <string name="cod_barra">Cod.Barra</string>
    <string name="dato">Dato</string>
</resources>